# frea

./: .clang  .gitignore  CMakeLists.txt  Makefile  README  affine_parts.hpp  angle.hpp  angle_func.hpp  angle_fwd.hpp  aux.cmake  compare.hpp  constant.hpp  detect_type.hpp  error.hpp  exception.hpp  expquat.hpp  freatypes.py  fwd.hpp  ieee754.hpp  index_sequence.hpp  interpolation.hpp  matrix.hpp  operators.hpp  plane.hpp  printer.py  quaternion.hpp  random.hpp  range.hpp  type_fwd.hpp  ulps.hpp  vector.hpp  vector_raw.hpp  vector_sse.hpp  yawpitchdist.hpp
include/: mat_d2.hpp  mat_d3.hpp  mat_d4.hpp  raw.hpp  sse.hpp  vec_d2.hpp  vec_d3.hpp  vec_d4.hpp  wrap_d2.hpp  wrap_d3.hpp  wrap_d4.hpp
matrix_spec/: d2.hpp  d3.hpp  d4.hpp
meta/: align.hpp  boolean.hpp  callable.hpp  check_macro.hpp  compare.hpp  constant.hpp  constant_t.hpp  countof.hpp  enable_if.hpp  mask.hpp  size.hpp  tuplehash.hpp
random/: angle.hpp  matrix.hpp  plane.hpp  quaternion.hpp  range.hpp  vector.hpp
serialization/: affine_parts.hpp  matrix.hpp  yawpitchdist.hpp
src/: affine_parts.hpp  angle.hpp  angle_func.hpp  compare.hpp  constant.hpp  detect_type.hpp  interpolation.hpp  matrix.hpp  quaternion.hpp  type_fwd.hpp  ulps.hpp  vector.hpp  yawpitchdist.hpp
src/include/: mat_d3.hpp  raw.hpp  sse.hpp  vec_d3.hpp
src/random/: matrix.hpp  quaternion.hpp  vector.hpp
src/serialization/: vector.hpp
src/tests/: affineparts_test.cpp  angle_test.cpp  expquaternion_test.cpp  matrix2_test.cpp  test.hpp  (+16 more)
tests/: affineparts_test.cpp  angle_test.cpp  expquaternion_test.cpp  main.cpp  matrix2_test.cpp  matrix3_test.cpp  matrix4_test.cpp  matrix_float_test.cpp  matrix_square_float_test.cpp  matrix_square_test.cpp  matrix_test.cpp  matrix_test2.cpp  plane_test.cpp  quaternion_test.cpp  range_test.cpp  test.hpp  ulps_test.cpp  vector2_test.cpp  vector3_test.cpp  vector4_test.cpp  vector_float_test.cpp  vector_int_test.cpp  vector_test.cpp  yawpitchdist_test.cpp
vector_spec/: d2.hpp
wrap_spec/: d3.hpp  d4.hpp
